<resources>
    <string name="app_name">SecurePhotoVault</string>
    <string name="app_name_txt">Secure Photo Vault</string>
    <string name="Protect_your_memories_and_secure_your_privacy">Protect your memories and secure your privacy!</string>
    <string name="delete">DELETE</string>
    <string name="todo">TODO</string>
    <string name="enter_your_pin_code">Enter your PIN code</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="submit">Submit</string>
    <string name="scroll_view_description">Scrollable area for displaying images</string>

</resources>