<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#E1E1E1"
    tools:context=".LockScreenActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_your_pin_code"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#3F51B5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:id="@+id/circle1"
            android:background="@drawable/circle_white" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:id="@+id/circle2"
            android:background="@drawable/circle_white" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:id="@+id/circle3"
            android:background="@drawable/circle_white" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:id="@+id/circle4"
            android:background="@drawable/circle_white" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_6"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_9"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/delete"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_0"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/submit"
            android:layout_margin="5dp"
            android:backgroundTint="#448AFF"/>

    </GridLayout>
</LinearLayout>

